# devcamp8-tragedy-of-commons

./: default.nix  tragedy-of-commons.code-workspace
zome/tests/: package-lock.json
zome/tests/src/: index.ts
zome/zomes/tragedy_of_commons/: Cargo.toml  run_cargo_test_with_mocks.sh
zome/zomes/tragedy_of_commons/src/: game_move.rs  game_round.rs  game_session.rs  input1.json  lib.rs  persistence.rs  types.rs  utils.rs
