[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "tragedy_of_commons"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tragedy_of_commons"

[dependencies]
# using same holochain version as nix-shell -> 3dc2d87f7f6de66d7de2c9160b6a962331ddd926
hdk = { git = "https://github.com/holochain/holochain", rev = "3dc2d87f7f6de66d7de2c9160b6a962331ddd926" }
derive_more = "0"
# use whatever serde hdk uses
serde = "*"
chrono = "0.4.19"
mockall_double = "0.2.0"
mockall = { version = "0.9"}
uuid = "^0.8"


[dev-dependencies]
# fixt = { git = "https://github.com/holochain/holochain", rev = "3dc2d87f7f6de66d7de2c9160b6a962331ddd926" }
# holochain_types = { git = "https://github.com/holochain/holochain", rev = "3dc2d87f7f6de66d7de2c9160b6a962331ddd926" }
mockall = { version = "0.9"}

[features]
default = []
mock = ["hdk/mock", "hdk/test_utils"]



